# baseball.computer.rs

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: actions.yml
src/: event_file.rs  event_file_entities.rs  event_file_parser.rs  game.rs  main.rs  play.rs  util.rs
src/db/: lib.rs
src/event_file/: box_score.rs  entities.rs  event_output.rs  game_metadata.rs  game_state.rs  info.rs  misc.rs  parser.rs  pbp.rs  pbp_to_box.rs  pitch_sequence.rs  play.rs  schemas.rs  traits.rs  writer.rs
