[package]
name = "boxball-rs"
version = "0.0.1"
authors = ["David Roher <david.roher@gmail.com>"]
edition = "2021"
description = "Creates structured datasets from raw Retrosheet files."
license = "BSL-1.0"
repository = "https://github.com/droher/boxball-rs"
readme = "README.md"
keywords = ["retrosheet", "baseball"]
categories = ["command-line-utilities", "data-processing", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock", "serde"]}
strum = "0.24.1"
strum_macros = "0.24.3"
csv = "1.2.2"
anyhow = "1.0.71"
num-traits = "0.2.15"
arrayref = "0.3.7"
arrayvec = {version = "0.7.2", features = ["serde"]}
lazy_static = "1.4.0"
const_format = "0.2.31"
either = {version = "1.8.1", features = ["serde", "use_std"]}
num_enum = "0.6.1"
bimap = "0.6.3"
clap = {version = "4.3.1", features = ["derive"]}
itertools = "0.10.5"
serde = {version = "1.0.163",  features = ["derive", "rc"]}
serde_json = {version = "1.0.96", features = ["preserve_order"]}
glob = "0.3.1"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bounded-integer = {version = "0.5.6", features = ["types", "serde"]}
serde_repr = "0.1.12"
regex = {version = "1.8.3", default-features = false, features = ["std", "perf"]} # No need for unicode
quick_cache = "0.3.0"
fixed-map = "0.9.2"
lazy-regex = "2.5.0"
serde_arrow = {version = "0.7.1", features = ["arrow-39"]}
arrow = {version = "39.0.0", default-features = false}
parquet = {version = "39.0.0", default-features = false, features = ["flate2", "arrow"]}