[package]
name = "boxball-rs"
version = "0.0.1"
authors = ["David Roher <david.roher@gmail.com>"]
edition = "2021"
description = "Creates structured datasets from raw Retrosheet files."
license = "BSL-1.0"
repository = "https://github.com/droher/boxball-rs"
readme = "README.md"
keywords = ["retrosheet", "baseball"]
categories = ["command-line-utilities", "data-processing", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"]}
strum = "0.25.0"
strum_macros = "0.25.2"
csv = "1.3.0"
anyhow = "1.0.75"
num-traits = "0.2.17"
arrayref = "0.3.7"
arrayvec = {version = "0.7.4", features = ["serde"]}
lazy_static = "1.4.0"
const_format = "0.2.31"
either = {version = "1.9.0", features = ["serde", "use_std"]}
num_enum = "0.7.0"
bimap = "0.6.3"
clap = {version = "4.3.23", features = ["derive"]}
itertools = "0.11.0"
serde = {version = "1.0.188",  features = ["derive", "rc"]}
serde_json = {version = "1.0.107", features = ["preserve_order"]}
glob = "0.3.1"
rayon = "1.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bounded-integer = {version = "0.5.7", features = ["types", "serde"]}
serde_repr = "0.1.16"
regex = {version = "1.10.0", default-features = false, features = ["std", "perf"]} # No need for unicode
quick_cache = "0.4.0"
fixed-map = {version = "0.9.2", features = ["serde"]}
lazy-regex = "3.0.2"
